--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 			<section id="primary">
 				<h3>General Information</h3>
 				<p>I am not currently looking for new design work, but I am available for other engagements. If you have any questions, please don't hesitate to contact me!</p>
-				<p>Please only use phone contact for urgen inqueries. Otherwise, email is the best way to reach me.</p>
+				<p>Please only use phone contact for urgent inqueries. Otherwise, email is the best way to reach me.</p>
 			</section>
 			<section id="secondary">
 				<h3>Contact Details</h3>
