changed photos and updated font size

--- a/index.html
+++ b/index.html
@@ -27,33 +27,33 @@
 			<section>
 				<ul id="gallery">
 					<li>
-						<a href="img/numbers-01.jpg">
-							<img src="img/numbers-01.jpg" alt="">
-							<p>Experimentation with color and texture.</p>
+						<a href="img/amsterdam.jpg">
+							<img src="img/amsterdam.jpg" alt="">
+							<p>An evening shot of a canal near Amsterdam, The Netherlands.</p>
 						</a>
 					</li>
 					<li>
-						<a href="img/numbers-02.jpg">
-							<img src="img/numbers-02.jpg" alt="">
-							<p>Playing with blending modes in Photoshop.</p>
+						<a href="img/bridge.jpg">
+							<img src="img/bridge.jpg" alt="">
+							<p>A late afternoon shot of an out-of-service railroad bridge in Snohomish, WA.</p>
 						</a>
 					</li>
 					<li>
-						<a href="img/numbers-06.jpg">
-							<img src="img/numbers-06.jpg" alt="">
-							<p>Trying to create an 80's style of glows.</p>
+						<a href="img/flowers.jpg">
+							<img src="img/flowers.jpg" alt="">
+							<p>A floral bunch from Seattle, WA.</p>
 						</a>
 					</li>
 					<li>
-						<a href="img/numbers-09.jpg">
-							<img src="img/numbers-09.jpg" alt="">
-							<p>Drips created using Photoshop brushes.</p>
+						<a href="img/sky.jpg">
+							<img src="img/sky.jpg" alt="">
+							<p>A late afternoon shot of the western sky in Marysville, WA.</p>
 						</a>
 					</li>
 					<li>
-						<a href="img/numbers-12.jpg">
-							<img src="img/numbers-12.jpg" alt="">
-							<p>Creating shapes using repetition.</p>
+						<a href="img/snow.jpg">
+							<img src="img/snow.jpg" alt="">
+							<p>Letters in nature.</p>
 						</a>
 					</li>
 				</ul>
