fix to open in new pages

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 				<img src="img/kyle.jpg" alt="Photo of Kyle Hamlin" class="profile-photo">
 				<h3>About</h3>
 				<p>Hi, This is Kyle Hamlin! This is my photo portfolio where I share my favorite work. When I'm not working, I enjoy dancing and hanging out with friends.</p>
-				<p>If you would like to follow me on twitter, my username is <a href="http://twitter.com/Kykydncr">@Kykydncr</a></p>
+				<p>If you would like to follow me on twitter, my username is <a href="http://twitter.com/Kykydncr" target="_blank">@Kykydncr</a></p>
 			</section>
 		</div>
 		<footer>
