--- a/index.html
+++ b/index.html
@@ -47,31 +47,31 @@
 			<section>
 				<ul id="gallery">
 					<li>
-						<a href="img/amsterdam.jpg">
+						<a href="img/amsterdam.jpg" target="_blank">
 							<img src="img/amsterdam.jpg" alt="">
 							<p>An evening shot of a canal near Amsterdam, The Netherlands.</p>
 						</a>
 					</li>
 					<li>
-						<a href="img/bridge.jpg">
+						<a href="img/bridge.jpg" target="_blank">
 							<img src="img/bridge.jpg" alt="">
 							<p>A late afternoon shot of an out-of-service railroad bridge in Snohomish, WA.</p>
 						</a>
 					</li>
 					<li>
-						<a href="img/flowers.jpg">
+						<a href="img/flowers.jpg" target="_blank">
 							<img src="img/flowers.jpg" alt="">
 							<p>A floral bunch from Seattle, WA.</p>
 						</a>
 					</li>
 					<li>
-						<a href="img/sky.jpg">
+						<a href="img/sky.jpg" target="_blank">
 							<img src="img/sky.jpg" alt="">
 							<p>A late afternoon shot of the western sky in Marysville, WA.</p>
 						</a>
 					</li>
 					<li>
-						<a href="img/snow.jpg">
+						<a href="img/snow.jpg" target="_blank">
 							<img src="img/snow.jpg" alt="">
 							<p>Letters in nature.</p>
 						</a>
