updates with schedule

--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,14 @@
 		<header>
 			<a href="index.html" id="logo">
 				<h1>Kyle Hamlin</h1>
-				<h2>Student</h2>
+				<h2>Student | Community Advisor</h2>
 			</a>
 			<nav>
 				<ul>
-					<li><a href="index.html">Portfolio</a></li>
+					<li><a href="index.html">Main</a></li>
+					<li><a href="photos.html">Photos</a></li>
 					<li><a href="about.html">About</a></li>
+					<li><a href="schedule.html">Schedule</a></li>
 					<li><a href="contact.html" class="selected">Contact</a></li>
 				</ul>
 			</nav>
@@ -46,7 +48,7 @@
 		<div id="wrapper">
 			<section id="primary">
 				<h3>General Information</h3>
-				<p>I am not currently looking for new design work, but I am available for other engagements. If you have any questions, please don't hesitate to contact me!</p>
+				<p>I am currently employed by both Eastern Washington University under Housing and Residential Life, and Eddie Bauer as a sales guide. If you have any questions, please don't hesitate to contact me!</p>
 				<p>Please only use phone contact for urgent inqueries. Otherwise, email is the best way to reach me.</p>
 			</section>
 			<section id="secondary">
