--- a/index.html
+++ b/index.html
@@ -30,53 +30,25 @@
 		<meta name="theme-color" content="#6ab47b">
 	</head>
 	<body>
-		<header>
+		<header id="main">
 			<a href="index.html" id="logo">
 				<h1>Kyle Hamlin</h1>
-				<h2>Student</h2>
+				<h2>Student | Community Advisor</h2>
 			</a>
 			<nav>
 				<ul>
-					<li><a href="index.html" class="selected">Portfolio</a></li>
+					<li><a href="index.html" class="selected">Main</a></li>
+					<li><a href="photos.html">Photos</a></li>
 					<li><a href="about.html">About</a></li>
+					<li><a href="schedule.html">Schedule</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
 		<div id="wrapper">
 			<section>
-				<ul id="gallery">
-					<li>
-						<a href="img/amsterdam.jpg" target="_blank">
-							<img src="img/amsterdam.jpg" alt="">
-							<p>An evening shot of a canal near Amsterdam, The Netherlands.</p>
-						</a>
-					</li>
-					<li>
-						<a href="img/bridge.jpg" target="_blank">
-							<img src="img/bridge.jpg" alt="">
-							<p>A late afternoon shot of an out-of-service railroad bridge in Snohomish, WA.</p>
-						</a>
-					</li>
-					<li>
-						<a href="img/flowers.jpg" target="_blank">
-							<img src="img/flowers.jpg" alt="">
-							<p>A floral bunch from Seattle, WA.</p>
-						</a>
-					</li>
-					<li>
-						<a href="img/sky.jpg" target="_blank">
-							<img src="img/sky.jpg" alt="">
-							<p>A late afternoon shot of the western sky in Marysville, WA.</p>
-						</a>
-					</li>
-					<li>
-						<a href="img/snow.jpg" target="_blank">
-							<img src="img/snow.jpg" alt="">
-							<p>Letters in nature.</p>
-						</a>
-					</li>
-				</ul>
+				<h1 id="welcome">Welcome to my website.</h1>
+				<h1 id="welcome">Have a look around and enjoy!</h1>
 			</section>
 		</div>
 		<footer>
