--- a/photos.html
+++ b/photos.html
@@ -38,8 +38,8 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">Main</a></li>
-					<li><a href="photos.html">Photos</a></li>
-					<li><a href="about.html" class="selected">About</a></li>
+					<li><a href="photos.html" class="selected">Photos</a></li>
+					<li><a href="about.html">About</a></li>
 					<li><a href="schedule.html">Schedule</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -47,10 +47,38 @@
 		</header>
 		<div id="wrapper">
 			<section>
-				<img src="img/kyle.jpg" alt="Photo of Kyle Hamlin" class="profile-photo">
-				<h3>About</h3>
-				<p>Hi, this is Kyle Hamlin! This is my website where I share my favorite work and you can view my schedule. When I'm not working, I enjoy dancing, watching movies, listening to music, and hanging out with friends.</p>
-				<p>If you would like to follow me on twitter, my username is <a href="http://twitter.com/Kykydncr" target="_blank">@Kykydncr</a></p>
+				<ul id="gallery">
+					<li>
+						<a href="img/amsterdam.jpg" target="_blank">
+							<img src="img/amsterdam.jpg" alt="">
+							<p>An evening shot of a canal near Amsterdam, The Netherlands.</p>
+						</a>
+					</li>
+					<li>
+						<a href="img/bridge.jpg" target="_blank">
+							<img src="img/bridge.jpg" alt="">
+							<p>A late afternoon shot of an out-of-service railroad bridge in Snohomish, WA.</p>
+						</a>
+					</li>
+					<li>
+						<a href="img/flowers.jpg" target="_blank">
+							<img src="img/flowers.jpg" alt="">
+							<p>A floral bunch from Seattle, WA.</p>
+						</a>
+					</li>
+					<li>
+						<a href="img/sky.jpg" target="_blank">
+							<img src="img/sky.jpg" alt="">
+							<p>A late afternoon shot of the western sky in Marysville, WA.</p>
+						</a>
+					</li>
+					<li>
+						<a href="img/snow.jpg" target="_blank">
+							<img src="img/snow.jpg" alt="">
+							<p>Letters in nature.</p>
+						</a>
+					</li>
+				</ul>
 			</section>
 		</div>
 		<footer>
