--- a/schedule.html
+++ b/schedule.html
@@ -30,7 +30,7 @@
 		<meta name="theme-color" content="#6ab47b">
 	</head>
 	<body>
-		<header>
+		<header id="main">
 			<a href="index.html" id="logo">
 				<h1>Kyle Hamlin</h1>
 				<h2>Student | Community Advisor</h2>
@@ -39,18 +39,16 @@
 				<ul>
 					<li><a href="index.html">Main</a></li>
 					<li><a href="photos.html">Photos</a></li>
-					<li><a href="about.html" class="selected">About</a></li>
-					<li><a href="schedule.html">Schedule</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="schedule.html" class="selected">Schedule</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
 		<div id="wrapper">
 			<section>
-				<img src="img/kyle.jpg" alt="Photo of Kyle Hamlin" class="profile-photo">
-				<h3>About</h3>
-				<p>Hi, this is Kyle Hamlin! This is my website where I share my favorite work and you can view my schedule. When I'm not working, I enjoy dancing, watching movies, listening to music, and hanging out with friends.</p>
-				<p>If you would like to follow me on twitter, my username is <a href="http://twitter.com/Kykydncr" target="_blank">@Kykydncr</a></p>
+				<h1 id="schedule">Here is my schedule for an average week.</h1>
+				<iframe src="https://docs.google.com/spreadsheets/d/1Y-UFqWQEVv70tp5cSA4bLy4Lbh6ZaKZg_XKy9lzYU8o/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 			</section>
 		</div>
 		<footer>
