updates to schedule and styling

--- a/photos.html
+++ b/photos.html
@@ -75,7 +75,7 @@
 					<li>
 						<a href="img/snow.jpg" target="_blank">
 							<img src="img/snow.jpg" alt="">
-							<p>Letters in nature.</p>
+							<p>Lines in nature.</p>
 						</a>
 					</li>
 				</ul>
