--- a/schedule.html
+++ b/schedule.html
@@ -47,8 +47,9 @@
 		</header>
 		<div id="wrapper">
 			<section>
-				<h1 id="schedule">Here is my schedule for an average week.</h1>
-				<iframe src="https://docs.google.com/spreadsheets/d/1Y-UFqWQEVv70tp5cSA4bLy4Lbh6ZaKZg_XKy9lzYU8o/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+				<h1 id="schedule">Here is my weekly schedule.</h1>
+				<iframe src="https://docs.google.com/spreadsheets/d/1Y-UFqWQEVv70tp5cSA4bLy4Lbh6ZaKZg_XKy9lzYU8o/pubhtml?widget=true&amp;headers=false"></iframe>
+				<p class="schedule">I will try to update this as often as I can.</p>
 			</section>
 		</div>
 		<footer>
