--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</header>
 		<div id="wrapper">
 			<section>
-				<h1 id="welcome">Welcome to my website.</h1>
+				<h1 id="welcome">Welcome to my website.</h1><hr>
 				<h1 id="welcome">Have a look around and enjoy!</h1>
 			</section>
 		</div>
