--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 		<title>Kyle Hamlin | Student</title>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,700|Bree+Serif' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="css/grid.css">
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 		<link rel="stylesheet" type="text/css" href="css/responsive.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,19 +29,20 @@
 		<meta name="msapplication-TileColor" content="#00aba9">
 		<meta name="msapplication-TileImage" content="mstile-144x144.png">
 		<meta name="theme-color" content="#6ab47b">
+		<meta name="viewport" content="width=device-width">
 	</head>
 	<body>
-		<header>
-			<a href="index.html" id="logo">
+		<header class="grid-container">
+			<a href="index.html" id="logo" class="grid-4">
+				<img src="img/logo_kh.jpg" alt="logo" id="img">
 				<h1>Kyle Hamlin</h1>
-				<h2>Student | Community Advisor</h2>
+				<h2>Student | Professional</h2>
 			</a>
-			<nav>
+			<nav class="grid-8">
 				<ul>
 					<li><a href="index.html">Main</a></li>
-					<li><a href="photos.html">Photos</a></li>
 					<li><a href="about.html" class="selected">About</a></li>
-					<li><a href="schedule.html">Schedule</a></li>
+					<li><a href="resume.html">Resume</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
