--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@
 		<title>Kyle Hamlin | Student</title>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,700|Bree+Serif' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="css/grid.css">
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 		<link rel="stylesheet" type="text/css" href="css/responsive.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,57 +29,28 @@
 		<meta name="msapplication-TileColor" content="#00aba9">
 		<meta name="msapplication-TileImage" content="mstile-144x144.png">
 		<meta name="theme-color" content="#6ab47b">
+		<meta name="viewport" content="width=device-width">
 	</head>
 	<body>
-		<header>
-			<a href="index.html" id="logo">
+		<header class="grid-container">
+			<a href="index.html" id="logo" class="grid-4">
+				<img src="img/logo_kh.jpg" alt="logo" id="img">
 				<h1>Kyle Hamlin</h1>
-				<h2>Student | Community Advisor</h2>
+				<h2>Student | Professional</h2>
 			</a>
-			<nav>
+			<nav class="grid-8">
 				<ul>
 					<li><a href="index.html">Main</a></li>
-					<li><a href="photos.html" class="selected">Photos</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href="schedule.html">Schedule</a></li>
+					<li><a href="resume.html" class="selected">Resume</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
 		<div id="wrapper">
 			<section>
-				<ul id="gallery">
-					<li>
-						<a href="img/amsterdam.jpg" target="_blank">
-							<img src="img/amsterdam.jpg" alt="">
-							<p>An evening shot of a canal near Amsterdam, The Netherlands.</p>
-						</a>
-					</li>
-					<li>
-						<a href="img/bridge.jpg" target="_blank">
-							<img src="img/bridge.jpg" alt="">
-							<p>A late afternoon shot of an out-of-service railroad bridge in Snohomish, WA.</p>
-						</a>
-					</li>
-					<li>
-						<a href="img/flowers.jpg" target="_blank">
-							<img src="img/flowers.jpg" alt="">
-							<p>A floral bunch from Seattle, WA.</p>
-						</a>
-					</li>
-					<li>
-						<a href="img/sky.jpg" target="_blank">
-							<img src="img/sky.jpg" alt="">
-							<p>A late afternoon shot of the western sky in Marysville, WA.</p>
-						</a>
-					</li>
-					<li>
-						<a href="img/snow.jpg" target="_blank">
-							<img src="img/snow.jpg" alt="">
-							<p>Lines in nature.</p>
-						</a>
-					</li>
-				</ul>
+				<h1 id="welcome">Welcome to my website.</h1><hr>
+				<h1 id="welcome">Have a look around and enjoy!</h1>
 			</section>
 		</div>
 		<footer>
